--- a/src/uSeoToolkit.Umbraco8/uSeoToolkit.Umbraco8.csproj
+++ b/src/uSeoToolkit.Umbraco8/uSeoToolkit.Umbraco8.csproj
@@ -6,4 +6,13 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="UmbracoCms.Core" Version="8.7.0" />
+	  <PackageReference Include="UmbracoCms.Web" Version="8.7.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="App_Plugins\uSeoToolkit\js\" />
+	</ItemGroup>
+
 </Project>
