--- a/src/uSeoToolkit.Umbraco8.Website/Web.config
+++ b/src/uSeoToolkit.Umbraco8.Website/Web.config
@@ -219,6 +219,10 @@
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="HtmlAgilityPack" publicKeyToken="bd319b19eaf3b43a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.11.28.0" newVersion="1.11.28.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <location path="umbraco">
