Moved code to editors

--- a/src/uSeoToolkit.Umbraco8.Tests/uSeoToolkit.Umbraco8.Tests.csproj
+++ b/src/uSeoToolkit.Umbraco8.Tests/uSeoToolkit.Umbraco8.Tests.csproj
@@ -169,6 +169,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\Providers\DefaultMetaTagsProviderTests.cs" />
+    <Compile Include="Mappers\DocumentTypeSettingsMapperTests.cs" />
     <Compile Include="Mocks\SeoFieldEditorMock.cs" />
     <Compile Include="Mocks\SeoFieldMock.cs" />
     <Compile Include="Models\SeoFieldEditorsTests\SeoFieldFieldsEditorTests.cs" />
