--- a/src/uSeoToolkit.Umbraco8.Website/uSeoToolkit.Umbraco8.Website.csproj
+++ b/src/uSeoToolkit.Umbraco8.Website/uSeoToolkit.Umbraco8.Website.csproj
@@ -264,6 +264,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Plugins\uSeoToolkit\backoffice\SiteAudit\create.controller.js" />
+    <Content Include="App_Plugins\uSeoToolkit\backoffice\SiteAudit\create.html" />
+    <Content Include="App_Plugins\uSeoToolkit\backoffice\SiteAudit\detail.controller.js" />
+    <Content Include="App_Plugins\uSeoToolkit\backoffice\SiteAudit\detail.html" />
+    <Content Include="App_Plugins\uSeoToolkit\backoffice\SiteAudit\list.controller.js" />
+    <Content Include="App_Plugins\uSeoToolkit\backoffice\SiteAudit\list.html" />
     <Content Include="App_Plugins\uSeoToolkit\css\main.css" />
     <Content Include="App_Plugins\uSeoToolkit\Interface\Components\DynamicSelectBox\dynamicSelectBox.html" />
     <Content Include="App_Plugins\uSeoToolkit\Interface\Components\DynamicSelectBox\dynamicSelectBox.controller.js" />
