--- a/src/uSeoToolkit.Umbraco8.Website/uSeoToolkit.Umbraco8.Website.csproj
+++ b/src/uSeoToolkit.Umbraco8.Website/uSeoToolkit.Umbraco8.Website.csproj
@@ -295,6 +295,7 @@
     <Content Include="App_Plugins\uSeoToolkit\Interface\SiteAudit\overview.controller.js" />
     <Content Include="App_Plugins\uSeoToolkit\Interface\SiteAudit\overview.html" />
     <Content Include="App_Plugins\uSeoToolkit\js\siteAuditHub.js" />
+    <Content Include="App_Plugins\uSeoToolkit\lang\en-us.xml" />
     <Content Include="config\grid.editors.config.js" />
     <Content Include="config\Lang\cs-CZ.user.xml" />
     <Content Include="config\Lang\da-DK.user.xml" />
